fix header, navbar collapse

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,9 @@ $primary-2: #3FA5D4;
 $primary-3: #F6F6F6;
 $secondary-1: #4A5768;
 $secondary-2: #76879A;
-
+html{
+    overflow-x: hidden;
+}
 #custom-nav {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -47,8 +49,15 @@ $secondary-2: #76879A;
         color: #fff !important;
         border-color: #fff !important;
     }
-    .navbar-toggler-icon{
-        color: #fff;
+    
+    @media (max-width: 991.98px) { 
+        .navbar-nav{            
+            padding: 10px;            
+        }
+        .nav-item{        
+            width: fit-content;
+            margin-bottom: 10px;
+        } 
     }
 }
 .title-section{
@@ -110,11 +119,10 @@ $secondary-2: #76879A;
     background-color:$primary-1;    
 }
 header{           
-    background-image: url('/dakon/assets/image/header.jpg');        
+    background-image: url('/assets/image/header.jpg');        
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;  
-    background-position: center;      
+    // background-attachment: fixed;
+    background-size: 100vw 750px;        
     .header{
         text-align: center;
         padding-top: 5em;
@@ -128,6 +136,10 @@ header{
         a{
             color: #fff;
         }
+    }
+    @media (max-width: 991.98px) { 
+        background-size: cover;
+        background-position: center;    
     }
 }
 
@@ -258,7 +270,7 @@ header{
     
 }
 .hubungi{
-    background-image: url('/dakon/assets/image/hubungi.png');
+    background-image: url('/assets/image/hubungi.png');
     background-position: left;
     background-size: cover;
     background-repeat: no-repeat;
@@ -266,6 +278,15 @@ header{
     @media (max-width: 991.98px) { 
         background-size: cover;
         background-position: right;
+    }
+    form{
+        margin-top: 24px;
+    }
+    .form-control{
+        border-radius: 0;
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid $primary-1;
     }
 }
 footer{
